--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,22 +23,38 @@ a { outline: none; color: #002d36; /* 0, 45, 54 */ text-decoration: none; }
 
 a:hover { color: #888; }
 
-.error { color: pink; }
-
-[role=main] {
-  font-size: 1rem;
+.error {
+  color: #cd5c5c;
+  text-align: center;
 }
 
-[role=main] h1 { font-weight: normal; }
+[role=main] { font-size: 1rem; }
 
-[role=main] input {
-  margin: 5px 5px 0;
+[role=main] h1 {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #dadada;
+  font-weight: normal;
+  text-align: center;
 }
 
-[role=main] label {
-  display: block;
-  margin: 0 auto;
+form[action=login] {
+  margin: 50px auto 0;
+  width: 300px;
 }
+
+form[action=login] * {
+  display: inline-block;
+  margin: 5px;
+}
+
+form[action=login] label {
+  width: 25%;
+  text-align: right;
+}
+
+#userId, #passWd { width: 66%; }
+
+form[action=login] input[type=submit] { float: right; }
 
 [role=contentinfo] {
   position: fixed;
