--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -35,6 +35,7 @@ a:hover { color: #888; }
 
 form[action=login] {
   margin: 50px auto 0;
+  overflow: hidden;
   width: 300px;
 }
 
@@ -44,18 +45,16 @@ form[action=login] * {
 }
 
 form[action=login] label {
-  width: 25%;
+  width: 75px;
   text-align: right;
 }
 
-#userId, #passWd { width: 66%; }
+#userId, #passWd { width: 202px; }
 
 form[action=login] input[type=submit] { float: right; }
 
 [role=contentinfo] {
-  position: relative;
-  bottom: 0;
-  left: 0;
+  margin-top: 50px;
   width: 100%;
   color: #888;
   font-size: 1rem;
