--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -7,8 +7,9 @@ html { height: 100%; overflow: auto; background: #fff; color: #505050; }
 body {
   position: relative;
   margin: 0 auto;
+  max-width: 1200px;
   min-height: 100%;
-  outline: 1px solid #dadada;
+  outline: 1px solid rgba(16, 16, 16, 0.1);
   overflow: auto;
   padding: 0 25px;
   font: 62.5% Lato, "Gill Sans", "Trebuchet MS", Calibri, Tahoma, Verdana, sans-serif;
@@ -28,10 +29,12 @@ a:hover { color: #888; }
 
 [role=main] h1 {
   padding-bottom: 20px;
-  border-bottom: 1px solid #dadada;
+  border-bottom: 1px solid rgba(16, 16, 16, 0.1);
   font-weight: normal;
   text-align: center;
 }
+
+[role=main] p { text-align: center; }
 
 form[action=login] {
   margin: 50px auto 0;
